--- a/demo.ipynb
+++ b/demo.ipynb
@@ -17,7 +17,9 @@
    "source": [
     "import torch\n",
     "import pickle\n",
-    "from EaBNet import make_eabnet_with_postnet\n"
+    "from EaBNet import make_eabnet_with_postnet\n",
+    "%reload_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -76,20 +78,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e086aba4-e85c-4fe6-95af-176d5b983ed8",
+   "metadata": {},
+   "source": [
+    "## resample to 16khz"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ebac30ab-17db-41e2-9279-8fd7d81fc623",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fs, audio = wavfile.read('./speech.wav')\n",
+    "audio_name = '00032'\n",
+    "audio_dir = './demo'\n",
+    "audio_path = os.path.join(audio_dir, audio_name+'.wav')\n",
+    "fs, audio = wavfile.read(audio_path)\n",
     "print(fs,audio.shape)\n",
-    "audio = audio[:,0]\n",
+    "assert len(audio.shape)==1\n",
+    "\n",
     "resample_fs = 16000\n",
-    "audio = signal.resample(audio, int(resample_fs*len(audio)/fs)).astype(audio.dtype)\n",
-    "wavfile.write('./speech1.wav', resample_fs, audio)\n",
-    "fs, audio = wavfile.read('./speech1.wav')\n",
-    "print(fs,audio.shape)\n"
+    "if fs!=resample_fs:\n",
+    "    audio = signal.resample(audio, int(resample_fs*len(audio)/fs)).astype(audio.dtype)\n",
+    "    wavfile.write(audio_path, resample_fs, audio)\n",
+    "    fs, audio = wavfile.read(audio_path)\n",
+    "    print(fs,audio.shape)"
    ]
   },
   {
@@ -103,10 +118,19 @@
     "with open('dataset/mcse_dataset_settings.json','r') as f:\n",
     "    opt = json.load(f)\n",
     "\n",
-    "target_speech = 'speech1.wav'\n",
-    "speech_root = '.'\n",
+    "target_speech = audio_name + '.wav'\n",
+    "speech_root = audio_dir\n",
+    "noise_root = 'demo/noise'\n",
+    "all_noises = os.listdir(noise_root)\n",
+    "clip_seconds = 2\n",
     "\n",
-    "sample = generate_random_noisy_for_speech(opt, 8, target_speech, noise_records, speech_root, noise_root, speech_start_sec=0)\n",
+    "specific = {\n",
+    "    'noisy_dBFS': -30,\n",
+    "    'noise_snr_list': [-1.5,-1.5]\n",
+    "}\n",
+    "\n",
+    "sample = generate_random_noisy_for_speech(opt, clip_seconds, target_speech, all_noises, speech_root, noise_root, speech_start_sec=0, \n",
+    "                                         specific=specific)\n",
     "meta = sample['meta']\n",
     "room = sample['room']\n",
     "freefield = sample['freefield']\n",
@@ -117,16 +141,9 @@
     "ax.view_init(elev=90,azim=-90)\n",
     "ax.set_xlabel('x')\n",
     "ax.set_ylabel('y')\n",
-    "print(meta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0969f972-597b-4dd5-acab-af456250db18",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(meta)\n",
+    "plt.show()\n",
+    "\n",
     "def show_audio(audio,fs,name):\n",
     "    print(f'{name} shape={audio.shape}')\n",
     "    plt.plot(audio)\n",
@@ -159,30 +176,16 @@
    "outputs": [],
    "source": [
     "from train_distributed import prepare_data\n",
-    "model = model.cuda()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "296be355-fdce-48a5-b712-5a09eb9beff6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "model = model.cuda()\n",
+    "\n",
     "def to_tensor(x):\n",
     "    return torch.tensor(x,dtype=torch.float)[None]\n",
-    "noisy_stft, target_stft = prepare_data(to_tensor(noisy), to_tensor(clean), 'cuda', args)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "564deb32-55a0-4c3a-994f-add1cc702b73",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "noisy_stft, target_stft = prepare_data(to_tensor(noisy), to_tensor(clean), 'cuda', args)\n",
+    "\n",
     "with torch.no_grad():\n",
     "    output = model(noisy_stft)\n",
+    "    \n",
     "device = 'cuda'\n",
     "esti_stft=output['esti_stft']\n",
     "print(esti_stft.shape)\n",
@@ -194,37 +197,9 @@
     "esti_stft = esti_stft.permute(0, 3, 2, 1)\n",
     "print(esti_stft.shape)\n",
     "esti_wav = torch.istft(torch.view_as_complex(esti_stft.contiguous()), fft_num, win_shift, win_size, torch.hann_window(win_size).to(device))\n",
-    "esti_wav = esti_wav.cpu().numpy()   #[1, 76640]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af80c43f-1a2b-4e09-af35-a9075b7dcfa7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "esti_wav = esti_wav.cpu().numpy()   #[1, 76640]\n",
+    "\n",
     "show_audio(esti_wav[0], 16000,'esti_wav')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7cdcd343-3340-4bb4-a54f-50606143651c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f85475ea-4df3-496b-a5cf-6ea3d2ce7cff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(np.min(esti_wav))"
    ]
   }
  ],
